syntax = "proto3";

package go.micro.service.fizzbuzz;

import "google/api/annotations.proto";
import "google/protobuf/empty.proto";

service FizzBuzz {
	rpc Get(FizzBuzzGetRequest) returns (FizzBuzzGetResponse) {
		option (google.api.http) = {
			post: "/fizzbuzz"
			body: "*"
		};
	}
	rpc Stats(google.protobuf.Empty) returns (FizzBuzzStatsResponse) {
		option (google.api.http) = {
			get: "/fizzbuzz"
		};
	}
}

message FizzBuzzGetRequest {
	uint64 Int1 = 1 [json_name="int1"];
	uint64 Int2 = 2 [json_name="int2"];
	uint64 Limit = 3 [json_name="limit"];
	string Str1 = 4 [json_name="str1"];
	string Str2 = 5 [json_name="str2"];
}

message FizzBuzzGetResponse {
	repeated string Items = 6 [json_name="items"];
}

message FizzBuzzStatsResponse {
	uint64 Int1 = 1 [json_name="int1"];
	uint64 Int2 = 2 [json_name="int2"];
	uint64 Limit = 3 [json_name="limit"];
	string Str1 = 4 [json_name="str1"];
	string Str2 = 5 [json_name="str2"];
	uint64 Requests = 8 [json_name="requests"];
}